--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,17 +1,17 @@
 .computer-science-facts-blog-he-icon {
   position: absolute;
   margin: 0 !important;
-  top: 0;
-  left: 941px;
-  width: 979px;
-  height: 1080px;
+  top: 0%;
+  left: 50%;
+  width: 50%;
+  height: 75%;
   object-fit: cover;
   z-index: 0;
 }
 .frame-child {
-  position: relative;
-  width: 1920px;
-  height: 1080px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background-image: url(../images/vector32@2x.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -21,10 +21,10 @@
 .frame-item {
   position: absolute;
   margin: 0 !important;
-  top: 0;
-  left: 837.85px;
-  width: 1082.15px;
-  height: 1054.24px;
+  top: -2.2%;
+  left: 33.5%;
+  width: 84%;
+  height: 100%;
   z-index: 2;
 }
 .computer-science-facts-blog-he-parent {
@@ -32,19 +32,18 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  position: relative;
   gap: var(--gap-3xs);
   z-index: 0;
 }
 .ccs-logo-icon,
 .wmsu-logo-1 {
   position: relative;
-  width: 110px;
-  height: 102px;
+  width: 100%;
+  height: 65px;
   object-fit: cover;
 }
 .ccs-logo-icon {
-  width: 99px;
+  width: 100%;
 }
 .wmsu-logo-1-parent {
   display: flex;
@@ -55,27 +54,29 @@
 }
 .an-ai-query-chatbot {
   position: absolute;
-  top: 96px;
-  left: 0;
+  top: 82px;
+  left: 40%;
   letter-spacing: 0.12em;
   text-transform: uppercase;
-  -webkit-text-stroke: 1px #fff;
+  font-size: 9px;
+  -webkit-text-stroke: 1px #454545;
 }
 .frame {
   position: absolute;
   top: 0;
-  left: 138px;
-  width: 291px;
+  left: 0;
+  width: 100%;
   height: 112px;
   overflow: hidden;
 }
 .p {
+  font-family: 'Nico-Moji';
   margin: 0;
   position: relative;
   font-size: inherit;
   line-height: 76.5px;
   font-weight: 400;
-  font-family: inherit;
+  font-size: 75px;
   -webkit-text-stroke: 2px #fff;
 }
 .frame5,
@@ -96,10 +97,10 @@
 .y {
   margin: 0;
   position: relative;
-  font-size: inherit;
+  font-size: 70px;
   line-height: 76.5px;
   font-weight: 400;
-  font-family: inherit;
+  font-family: 'Nico-Moji';
   display: inline-block;
   width: 67px;
   flex-shrink: 0;
@@ -108,7 +109,7 @@
 .frame6 {
   position: absolute;
   top: -7px;
-  left: 73.5px;
+  left: 60.5px;
   width: 67px;
   height: 120px;
   overflow: hidden;
@@ -132,7 +133,7 @@
 }
 .frame3 {
   top: -26.99px;
-  left: 0.5px;
+  left: 13%;
   width: 142px;
   height: 132.99px;
   overflow: hidden;
@@ -142,26 +143,27 @@
   justify-content: flex-end;
   padding: 0.00000762939453125px 0;
   box-sizing: border-box;
+  font-size: 70px;
 }
 .b,
 .o {
   margin: 0;
   top: 0;
-  font-size: inherit;
+  font-size: 70px;
   line-height: 76.5px;
   font-weight: 400;
-  font-family: inherit;
+  font-family: 'Nico-Moji';
   display: inline-block;
   -webkit-text-stroke: 2px #fff;
 }
 .b {
-  left: 0;
-  width: 73.17px;
+  left: 16%;
+  width: 54.17px;
   height: 71.69px;
 }
 .o {
-  left: 65.04px;
-  width: 73.99px;
+  left: 41%;
+  width: 54.99px;
 }
 .frame8,
 .o,
@@ -172,18 +174,18 @@
   margin: 0;
   position: absolute;
   top: 0;
-  left: 129.27px;
-  font-size: inherit;
+  left: 66%;
+  font-size: 70px;
   line-height: 76.5px;
   font-weight: 400;
-  font-family: inherit;
+  font-family: 'Nico-Moji';
   display: inline-block;
-  width: 70.73px;
+  width: 55.73px;
   -webkit-text-stroke: 2px #fff;
 }
 .frame8 {
   position: relative;
-  width: 200.01px;
+  width: 100%;
   overflow: hidden;
   flex-shrink: 0;
 }
@@ -194,7 +196,7 @@
   height: 79.01px;
 }
 .frame7 {
-  left: 225.99px;
+  left: 45%;
   width: 200.01px;
   overflow: hidden;
   display: flex;
@@ -210,8 +212,8 @@
 .frame2 {
   top: 7px;
   left: 0;
-  width: 426px;
-  height: 98px;
+  width: 100%;
+  height: 100%;
 }
 .frame1,
 .frame2,
@@ -220,18 +222,18 @@
   overflow: hidden;
 }
 .tableryin-yang-icon {
-  top: calc(50% - 57px);
-  left: calc(50% - 82px);
-  width: 103px;
-  height: 101px;
+  top: calc(50% - 66px);
+  left: calc(50% - 53px);
+  width: 70px;
+  height: 100%;
 }
 .frame1 {
   top: 0;
   left: 0;
-  width: 426px;
-  height: 114px;
+  width: 100%;
+  height: 115px;
   text-align: left;
-  font-size: 100px;
+  font-size: 70px;
   font-family: var(--font-nico-moji);
 }
 .logo {
@@ -242,9 +244,9 @@
 .frame-parent {
   margin: 0 !important;
   position: absolute;
-  top: 119px;
-  left: 52px;
-  width: 806px;
+  top: 5%;
+  left: 0;
+  width: 45%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
