--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -48,3 +48,14 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+
+.dashboard-header {
+  transition: all 0.5s;
+  z-index: 997;
+  height: 70px;
+  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+  background: linear-gradient(-111deg, rgb(11 90 93) 11%, rgb(24 118 121) 22%, rgb(11 88 91) 38%, rgb(12 89 85) 57%, rgb(27 73 61 / 96%) 73%, rgb(26 64 56) 89%, rgb(29 69 60) 100%);
+  padding-left: 20px;
+  /* Toggle Sidebar Button */
+  /* Search Bar */
+}
