--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -28447,7 +28447,7 @@ div.tagsinput span.tag a {
 }
 
 .page-body-wrapper {
-  min-height: calc(100vh - 50px);
+  min-height: calc(100vh - 25px);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
@@ -28468,7 +28468,7 @@ div.tagsinput span.tag a {
   transition: width 0.25s cubic-bezier(0, 1.36, 0, 1.34), margin 0.25s cubic-bezier(0, 1.36, 0, 1.35);
   width: calc(100% - 235px);
   margin-left: 235px;
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - 50px);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column;
@@ -28504,7 +28504,7 @@ div.tagsinput span.tag a {
   font-family: "Nunito", sans-serif;
   font-weight: 500;
   padding: 0;
-  width: 235px;
+  width: 60px;
   position: fixed;
   z-index: 50;
   box-shadow: 0px 2px 6px 0px #888888eb;
@@ -29070,7 +29070,7 @@ div.tagsinput span.tag a {
   margin-top: 0;
   right: 0;
   left: auto;
-  top: 70px;
+  top: 45px;
 }
 
 .rtl .navbar .navbar-menu-wrapper .navbar-nav .nav-item.dropdown .navbar-dropdown {
@@ -30016,13 +30016,14 @@ div.tagsinput span.tag a {
   .sidebar-icon-only .sidebar {
     width: 60px;
     position: fixed;
+    left: -1px;
   }
   .sidebar-icon-only .sidebar .nav {
     overflow: visible;
     margin-top: 15px;
     margin-left: 5px;
     margin-right: 5px;
-    gap: 5px;
+    gap: 10px;
   }
   .sidebar-icon-only .sidebar .nav .nav-item {
     position: relative;
@@ -30054,7 +30055,7 @@ div.tagsinput span.tag a {
   }
   .sidebar-icon-only .sidebar .nav .nav-item .nav-link i.menu-icon {
     margin-right: 0;
-    margin-left: 0;
+    margin-left: 16px;
     margin-bottom: 0;
   }
   .sidebar-icon-only .sidebar .nav .nav-item .nav-link i.menu-arrow {
@@ -30076,7 +30077,7 @@ div.tagsinput span.tag a {
     align-items: center;
     background: #062410;
     padding: 0.5rem 1.4rem;
-    left: 64.35px;
+    left: 55px;
     position: absolute;
     text-align: left;
     top: 0;
@@ -30116,7 +30117,7 @@ div.tagsinput span.tag a {
     background: #3f5860fa;
     border-radius: 0 0 5px 0;
     position: absolute;
-    left: 70px;
+    left: 55px;
     width: 190px;
     -webkit-box-shadow: 4px 4px 7px 0px rgba(182, 185, 189, 0.25);
     box-shadow: 4px 4px 7px 0px rgba(182, 185, 189, 0.25);
@@ -30137,6 +30138,7 @@ div.tagsinput span.tag a {
   .sidebar-icon-only .sidebar .nav:not(.sub-menu) .nav-item:hover .nav-link {
     border-radius: 6px;
     font-size: 11px;
+    width: 70px;
   }
   .sidebar-icon-only .sidebar .nav.sub-menu {
     padding: 3px;
